# Energy-Storage-Optimization-Platform

./: CLAUDE.md  README.md  backlog.md  main.py  pyproject.toml
comparison/: process_results.py  run_v5_comparison.py
config/: README.md  __init__.py  parameters.py
core/config/: parameters.py
core/markets/: activation.py
core/mpc/: adapters.py  economic.py  tracking.py
core/physics/: plant.py
core/pi/: regulation.py
core/planners/: deterministic_lp.py  plan.py  stochastic_ems.py
core/simulator/: core.py  strategy.py
data/: README.md  price_generator.py
docs/: realism_fix_1_design.md  wow_factor_1_design.md
ems/: README.md  __init__.py  economic_ems.py
estimation/: README.md  __init__.py  ekf.py  mhe.py
models/: README.md  __init__.py  battery_model.py
mpc/: README.md  __init__.py  tracking_mpc.py
presentation/: generate_v5_deck.py  petrogaz_stakeholder_deck.html
simulation/: README.md  simulator.py
strategies/deterministic_lp/: README.md
strategies/economic_mpc/: README.md  strategy.py
strategies/ems_clamps/: README.md
strategies/rule_based/: README.md
strategies/tracking_mpc/: README.md  strategy.py
v2_thermal_model/: README.md  stress_test.py
v3_pack_model/: README.md  stress_test.py
v3_pack_model/mpc/: tracking_mpc.py
v4_electrical_rc_model/: README.md  run_comparison.py  validate_real_prices.py
v4_electrical_rc_model/config/: parameters.py
v4_electrical_rc_model/data/: real_price_loader.py
v5_regulation_activation/: README.md  main.py  stress_test.py
visualization/: README.md  plot_results.py
(+12 files in other folders)
