[project]
name = "battery-optimization-platform"
version = "0.1.0"
description = "Hierarchical nonlinear BESS control platform: stochastic EMS + tracking MPC + EKF/MHE using CasADi/IPOPT"
requires-python = ">=3.10"
dependencies = [
    "casadi>=3.6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]
